# printmergegenerator

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  index.html  main.py  pyproject.toml  requirements.txt  style.css
.github/ISSUE_TEMPLATE/: BUG.md
.github/workflows/: build_wheel.yml  deploy.yml
assets/stylesheets/: style_main.css
docs/: 404.html  index.html
docs/assets/: print-merge-generator-15a879faf3a9e52a.js  print-merge-generator-15a879faf3a9e52a.js.br  print-merge-generator-76e5eb84e1c977e1.js  print-merge-generator-76e5eb84e1c977e1.js.br  print-merge-generator-eb95264e1e98c256.js  print-merge-generator-eb95264e1e98c256.js.br  print-merge-generator_bg-0191945c9777e6ee.wasm  print-merge-generator_bg-0191945c9777e6ee.wasm.br  print-merge-generator_bg-32f4be2653a39ffe.wasm  print-merge-generator_bg-32f4be2653a39ffe.wasm.br  print-merge-generator_bg-9163dc3244ba7ba7.wasm  print-merge-generator_bg-9163dc3244ba7ba7.wasm.br  print-merge-generator_bg-b259b5a382f2b037.wasm  print-merge-generator_bg-b259b5a382f2b037.wasm.br  print-merge-generator_bg-d0ecab71496d2613.wasm  print-merge-generator_bg-d0ecab71496d2613.wasm.br  print-merge-generator_bg-f9409e828c8fef89.wasm  print-merge-generator_bg-f9409e828c8fef89.wasm.br  printmergegenerator_icon-0899c182cbe29822.svg.br  style_main-4c75635ddba83bd1.css  style_main-4c75635ddba83bd1.css.br  style_main-63419ffaf102b112.css  style_main-63419ffaf102b112.css.br
src/: BUILD.md  lib.rs  main.rs  script.js
src/framework/: generator.rs
src/ui/: footer.rs  header.rs  main_content.rs  mod.rs
