[package]
name = "print-merge-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.1"
dioxus = { version = "0.6.0", features = [] }
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2.100"
web-sys = "0.3.77"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
